# gcprs

./: Cargo.toml  LICENSE-MIT  README.md
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: bq.rs  chart.rs  common.rs  df.rs  drive.rs  gcs.rs  main.rs  ml.rs  text.rs
cli/src/df/: func.rs
cli/src/ml/: common.rs
examples/: bigquery.rs  gcs.rs  sheets.rs
src/: aiplatform.rs  auth.rs  auth_legacy.rs  auth_test.rs  bigquery.rs  bigquery_test.rs  drive.rs  gcs.rs  gcs_test.rs  lib.rs  main.rs  metadata.rs  metadata_test.rs  pubsub.rs  run.rs  secretmanager.rs  sheets.rs
src/common/: error.rs
src/run/: execution.rs  job.rs  service.rs
