[package]
authors = ["Tomohiko OKAZAKI"]
name = "gcprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "cli",
  "server",
]
exclude = [
  "binpacking_web",
  "shift_web",
]

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
itertools = "0.10.5"
ndarray = "0.15.0"
async-recursion = "1.0.0"
chrono = { version = "^0.4", features = ["serde"] }
anyhow = { version = "^1.0", features = ["backtrace"] }
hyper = "^0.14"
hyper-rustls = "^0.23.0"
yup-oauth2 = "^8.0"
rayon = "^1.5"
urlencoding = "1.0.0"
webbrowser = "0.8.3"
tokio = { version = "^1.0", features = ["full"] }

google-storage1 = { git = "https://github.com/tmokazaki/google-apis-rs.git", branch = "main"}
google-bigquery2 = { git = "https://github.com/tmokazaki/google-apis-rs.git", branch = "main" }
google-sheets4 = { git = "https://github.com/tmokazaki/google-apis-rs.git", branch = "main"}
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
mime = "0.3.16"
jsonwebtoken = { version = "8.2.0", features = ["use_pem"] }

[dev-dependencies]
speculate = "*"
rstest = "*"
