[package]
authors = ["Tomohiko OKAZAKI"]
name = "gcprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
bigquery = ["google-bigquery2"]
gcs = ["google-storage1", "mime", "mime_guess"]
drive = ["google-drive3", "mime_guess"]
pubsub = ["google-pubsub1"]
sheets = ["google-sheets4"]
secretmanager = ["google-secretmanager1"]
run = ["google-run2", "regex"]
aiplatform = ["google-aiplatform1_beta1", "mime_guess"]
full = ["bigquery", "gcs", "drive", "pubsub", "sheets", "run", "aiplatform"]

[workspace]
members = [
  "cli",
]
exclude = [
  "server",
  "binpacking_web",
  "shift_web",
]

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
async-recursion = "1.1.1"
chrono = { version = "^0.4", features = ["serde"] }
anyhow = { version = "^1.0", features = ["backtrace"] }
http-body-util = "^0.1"
hyper-legacy = { version = "^0.14", package = "hyper" }
hyper-rustls-legacy = { version = "^0.25", package = "hyper-rustls" }
yup-oauth2-legacy = { version = "^9", package = "yup-oauth2", features = ["hyper-rustls"] }
rayon = "^1.11"
urlencoding = "^2"
webbrowser = ">0.8.3"
regex = { version = "1.5", optional = true }
tokio = { version = "^1.0", features = ["full"] }

google-storage1 = { version = "*", optional = true }
google-bigquery2 = { version = "*", optional = true }
google-sheets4 = { version = "*", optional = true }
google-drive3 = { version = "*", optional = true }
google-pubsub1 = { version = "*", optional = true }
google-run2 = { version = "*", optional = true }
google-secretmanager1 = { version = "*", optional = true }
google-iamcredentials1 = { version = "*" }
google-aiplatform1_beta1 = { version = "*", optional = true }
uuid = { version = "1.18.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
mime = { version = "0.3.16", optional = true }
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
mime_guess = { version = "2.0.4", optional = true }

[dev-dependencies]
speculate = "*"
rstest = "*"
mockall = "0.13.1"
