[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
clap = { version = "^4", features = ["derive"] }
anyhow = { version = "^1.0", features = ["backtrace"] }
tokio = { version = "^1.0", features = ["full"] }
tabled = { version = "*" }
json_to_table = "*"
url = "^2"

gcprs = { path = "../" }
datafusion = "*"
thiserror = "1.0.38"
object_store = { version = "0.5.4", features = ["gcp"] }
datafusion-common = "*"
datafusion-expr = "*"
linfa = { git = "https://github.com/tmokazaki/linfa.git", branch="features/l2_distance_serde", version = "0.6.1", features = ["serde", "ndarray-linalg"] }
linfa-clustering = { git = "https://github.com/tmokazaki/linfa.git", branch="features/l2_distance_serde", version = "0.6.1", features = ["ndarray-linalg", "serde"] }
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
linfa-nn = { version = "0.6.1", features = ["serde"] }
